updated clang-format settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.23 FATAL_ERROR)
 project(deus DESCRIPTION "DEUS" VERSION 0.1.0 LANGUAGES C CXX)
 
-# Dependencies
+# Third Party
 list(PREPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
+list(PREPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/third_party)
+
+# Dependencies
 find_package(WDK REQUIRED)
 
 # Driver
